overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -569,6 +569,9 @@ header {
   bottom: auto;
   right: 0;
   left: auto;
+  z-index: 99999;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 header svg {
@@ -1161,6 +1164,10 @@ header hr {
 }
 
 /* ------------ # Work ------------ */
+#sectionWork {
+  height: 170vh;
+}
+
 #sectionWork .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1207,8 +1214,8 @@ header hr {
 
 .galleryGrid h1 {
   font-family: "azonix";
-  font-size: 3rem;
-  font-weight: auto;
+  font-size: 2rem;
+  font-weight: 100;
   text-shadow: -5px 4px 2px rgba(0, 0, 0, 0.5);
   margin: auto;
   color: #f4ae34;
@@ -1216,6 +1223,9 @@ header hr {
 
 @media (min-width: 992px) {
   .galleryGrid h1 {
+    font-family: "azonix";
+    font-size: 3rem;
+    font-weight: auto;
     -webkit-writing-mode: vertical-rl;
         -ms-writing-mode: tb-rl;
             writing-mode: vertical-rl;
@@ -1228,6 +1238,7 @@ header hr {
 
 .workGame {
   opacity: 0;
+  padding-top: 3rem;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 0.5fr [game];
@@ -1239,6 +1250,7 @@ header hr {
 
 @media (min-width: 992px) {
   .workGame {
+    padding-top: 0;
     -ms-grid-columns: auto 1fr auto 1fr;
         grid-template-columns: auto 1fr auto 1fr;
     -ms-grid-rows: 1fr 1fr;
