--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -6,6 +6,7 @@
 
 #sectionWork {
     // display: none;
+    height: 170vh;
     .container {
         @include flex(column, center, center);
         height: 100%;
@@ -31,12 +32,13 @@
     grid-gap: 0.6rem;
 
     h1 {
-        @include font("azonix", 3rem, auto);
+        @include font("azonix", 2rem, 100);
         text-shadow: -5px 4px 2px rgba(0, 0, 0, 0.5);
         margin: auto;
         color: $color_yellow;
 
         @include desktop {
+            @include font("azonix", 3rem, auto);
             writing-mode: vertical-rl;
             transform: rotate(180deg);
             transform-origin: center;
@@ -47,7 +49,7 @@
 .workGame {
     // animation: popUp 1s ease 1s;
     opacity: 0;
-    // padding: 5rem;
+    padding-top: 3rem;
     // background-color: darken($color_black, 3%);
     // border: 3px solid $color_cyan;
     display: grid;
@@ -56,6 +58,7 @@
     grid-template-areas: "Title Title""game1 game1""gameHalf1 gameHalf2""game2 game2""game3 game3""game4 game4";
 
     @include desktop {
+        padding-top: 0;
         grid-template-columns: auto 1fr auto 1fr;
         grid-template-rows: 1fr 1fr;
         grid-template-areas: "title . .""title . .";
